# share-meal

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  package-lock.json
.github/workflows/: build-ios.yml
assets/: main.css  tailwind.css
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/member/: helper.rs  member_clear_button.rs  member_input.rs  member_list.rs  member_record.rs  mod.rs
src/components/order/: mod.rs  order_input.rs  order_insert.rs  order_list.rs  order_member_check_box.rs  order_modal_edit.rs  order_price_input.rs  order_record.rs
src/components/stats/: mod.rs  stats_overview.rs
src/components/tab/: mod.rs  tab_view_switcher.rs
src/helper/: price.rs
src/state/: app_state.rs  member.rs  mod.rs  order.rs
