[package]
name = "shared_meal"
version = "1.0.0"
authors = ["Phudit Chuengjaroen <phudit.nut@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
dioxus-material-icons = "3.0.0"
hextool = "0.1.3"
uuid = { version = "1.16.0", features = ["v4", "js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# # # # # # #
# WASM Deps #
# # # # # # #
[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.16.0", features = ["v4", "js"] }
